--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -5,7 +5,7 @@ eureka:
     service-url:
       defaultZone: http://localhost:8091/eureka/
     # 表示eureka client间隔多久去拉取服务注册信息，默认为30秒，对于api-gateway，如果要迅速获取服务注册状态，可以缩小该值，比如5秒
-    registry-fetch-interval-seconds: 15
+    registry-fetch-interval-seconds: 5
   instance:
     prefer-ip-address: true
     status-page-url-path: /actuator/info
@@ -33,7 +33,13 @@ spring:
         filters:
         # 表示去掉转发规则的前缀的部分数(只保留**部分)
         - StripPrefix=1
-        # 这个路由的执行order
+        - name: Hystrix
+          args:
+            # 表示HystrixCommand代码的名称
+            name: fallbackCommand
+            # 表示触发断路由后的跳转请求url 
+            fallbackUri: forward:/hystrixFallback
+        # 配置这个路由执行的order
         # order: 1
       - id: api-test
         uri: lb://cloud-msg-push
