--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,5 @@
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
 # \u8bbe\u7f6e\u6307\u5b9acommandKey\u7684\u65ad\u8def\u8d85\u65f6\u65f6\u95f4.commandkey\u5bf9\u5e94yml\u4e2d\u914d\u7f6e\u7684Hystrix\u62e6\u622a\u5668\u7684name
 # hystrix.command.{commandkey}.execution.isolation.thread.timeoutInMilliseconds: 30000
+# \u8bbe\u7f6ewebsocket\u670d\u52a1\u7194\u65ad\u8d85\u65f6\u65f6\u95f4\u4e3a1\u5e74
+# hystrix.command.msgPushCommand.execution.isolation.thread.timeoutInMilliseconds: 31536000000
