--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
-# \u8bbe\u7f6e\u9ed8\u8ba4\u5168\u5c40\u7194\u65ad\u5668\u7684\u8d85\u65f6\u65f6\u95f4(\u8868\u793a\u8bf7\u6c42\u8d85\u65f630\u79d2\u5c06\u6267\u884c\u65ad\u8def\u7531) \u9ed8\u8ba4\u914d\u7f6e\u53c2\u89c1\uff1aAbstractRibbonCommand
+# 设置默认全局熔断器的超时时间(表示请求超时30秒将执行断路由) 默认配置参见：AbstractRibbonCommand
 hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
-# \u8bbe\u7f6e\u6307\u5b9acommandKey\u7684\u65ad\u8def\u8d85\u65f6\u65f6\u95f4.commandkey\u5bf9\u5e94yml\u4e2d\u914d\u7f6e\u7684Hystrix\u62e6\u622a\u5668\u7684name
+
+# 设置指定commandKey的断路超时时间.commandkey对应yml中配置的Hystrix拦截器的name
 # hystrix.command.{commandkey}.execution.isolation.thread.timeoutInMilliseconds: 30000
-# \u8bbe\u7f6ewebsocket\u670d\u52a1\u7194\u65ad\u8d85\u65f6\u65f6\u95f4\u4e3a1\u5e74
-# hystrix.command.msgPushCommand.execution.isolation.thread.timeoutInMilliseconds: 31536000000
+
+# 关闭websocket服务熔断超时
+hystrix.command.msgPushCommand.execution.timeout.enabled: true
+hystrix.command.msgPushCommand.execution.isolation.thread.timeoutInMilliseconds: 35000
