--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,5 +5,4 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
 # hystrix.command.{commandkey}.execution.isolation.thread.timeoutInMilliseconds: 30000
 
 # 关闭websocket服务熔断超时
-hystrix.command.msgPushCommand.execution.timeout.enabled: true
-hystrix.command.msgPushCommand.execution.isolation.thread.timeoutInMilliseconds: 35000
+hystrix.command.msgPushCommand.execution.timeout.enabled: false
