--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,5 @@ hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 30000
 
 # 关闭websocket服务熔断超时
 hystrix.command.msgPushCommand.execution.timeout.enabled: false
+hystrix.command.msgPushCommand2.execution.timeout.enabled: false
+
