--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,8 +8,8 @@ eureka:
     registry-fetch-interval-seconds: 5
   instance:
     prefer-ip-address: true
-    status-page-url-path: /actuator/info
-    health-check-url-path: /actuator/health
+    lease-renewal-interval-in-seconds: 10
+    instance-id: ${spring.cloud.client.ip-address}:${server.port}
 spring:
   application:
     name: eureka-client-gateway
@@ -21,26 +21,40 @@ spring:
         
       # 定义具体的路由信息
       routes:
+      #------------------------------配置示例---------------------------------------
         # 这个路由的唯一id，不定义的话为一个uuid
-      - id: msg-push-1
+      - id: test-example
         # http请求为lb://前缀 + 服务id；ws请求为lb:ws://前缀 + 服务id；表示将请求负载到哪一个服务上
-        # 注：注册端点不能为"ws"
-        uri: lb://cloud-msg-push
+        # 注：websocket注册端点不能为"ws"
+        uri: lb://testapi
         # 表示这个路由的请求匹配规则，只有符合这个规则的请求才会走这个路由。为一个数组，每个规则之间为并且的关系
         predicates:
-        - Path=/msgpush/**
+        - Path=/HelloWorld/**
         # 请求转发前的filter，为一个数组
         filters:
         # 表示去掉转发规则的前缀的部分数(只保留**部分)
         - StripPrefix=1
+        # 配置熔断器
         - name: Hystrix
           args:
             # 表示HystrixCommand代码的名称
-            name: msgPushCommand
+            name: fallbackCommand
             # 表示触发断路由后的跳转请求url 
             fallbackUri: forward:/hystrixFallback
         # 配置这个路由执行的order
-        # order: 1
+        order: 1
+      #------------------------------sockjs ws 端点配置------------------------------
+      - id: msg-push-1
+        uri: lb://cloud-msg-push
+        predicates:
+        - Path=/msgpush/**
+        filters:
+        - StripPrefix=1
+        - name: Hystrix
+          args:
+            name: msgPushCommand
+            fallbackUri: forward:/hystrixFallback
+      #------------------------------原始  ws 端点配置---------------------------------
       - id: msg-push-2
         uri: lb:ws://cloud-msg-push
         predicates:
@@ -49,7 +63,5 @@ spring:
         - StripPrefix=1
         - name: Hystrix
           args:
-            # 表示HystrixCommand代码的名称
             name: msgPushCommand-ws
-            # 表示触发断路由后的跳转请求url 
             fallbackUri: forward:/hystrixFallback
